# meta-ads-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: -delete- claude_desktop_config.json  claude_desktop_config.json
scripts/: run_meta_ads_mcp.sh
src/meta_ads_mcp/: server.py
src/meta_ads_mcp/adapters/meta/: client.py
src/meta_ads_mcp/config/: settings.py
src/meta_ads_mcp/tools/: __init__.py  accounts.py  campaigns.py  health.py  insights.py
src/meta_ads_mcp/utils/: errors.py  paging.py  safe_tool.py
