[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ads-mcp"
version = "0.0.1"
description = "MCP server for Meta Ads insights (read-only by default)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=2.0", "requests>=2.31.0"]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
